--- a/css/index.css
+++ b/css/index.css
@@ -12,32 +12,198 @@ nav {
   min-height: 15vh;
   width: 90%;
   margin: auto;
-  /* background-color: aqua; */
+  padding: 0.3rem;
+  background-color: #f5f5f5;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 10rem;
   font-family: "Poppins";
   font-size: 2rem;
 }
-
 .nav-items {
   display: flex;
-  justify-content: center;
+  /* flex-grow: 1; */
+  flex: 2 0 0;
+  justify-content: space-evenly;
   align-items: center;
-  flex-grow: 0.7;
-  z-index: 1;
 }
 .nav-item {
-  padding: 0 30px;
+  /* gap: 3rem; */
+  padding: 0 3rem;
 }
 
-.logo {
-  /* gap: 00px; */
-  display: flex;
-  /* flex-grow: 2; */
-}
 .nav-left-logo {
-  position: absolute;
+  display: block;
+  max-width: 100%;
+  flex: 1 0 0;
+  padding: 0;
+  /* flex-basis: 0.5rem; */
+  /* position: absolute;
   right: -2%;
-  z-index: 0;
+  z-index: 0; */
+}
+
+/* Navbar section end  */
+
+/* Hero section start  */
+
+.intro-section {
+  min-height: 85vh;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  overflow: hidden;
+}
+
+.left-section {
+  flex: 1 1 55%;
+}
+
+.left-section h3 {
+  font-family: "Poppins";
+  font-size: 4.5rem;
+  font-weight: 100;
+}
+.left-section h1 {
+  font-family: "Fredoka One";
+  font-size: 6rem;
+  /* width: 90%; */
+}
+.sub-headlines {
+  display: flex;
+  flex-direction: column;
+  font-family: "Poppins";
+  font-size: 3rem;
+  font-weight: 100;
+  /* background-color: blue; */
+  margin-top: 4%;
+  margin-bottom: 4%;
+  margin-left: 4%;
+  /* width: 50%; */
+}
+.sub-headline {
+  padding: 0.5rem;
+}
+.sub-headline img {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #fe5e35;
+  padding: 0.5rem;
+}
+.text {
+  /* background-color: #fe5e35; */
+  /* width: 50%; */
+  font-family: "Poppins";
+  font-size: 1.3rem;
+  margin-top: 2%;
+  margin-bottom: 6.4%;
+}
+.action-btn {
+  padding: 1rem 2rem;
+  margin-right: 2rem;
+  border: none;
+  border-radius: 2.5rem;
+  background-color: #fe5e35;
+  color: white;
+  font-family: "Poppins";
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+/* right section start  */
+
+.right-section {
+  flex: 1 1 45%;
+}
+
+.headphone-div {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
+  /* align-items: space-between; */
+  position: relative;
+}
+
+/* .headphone-div {
+  position: relative;
+  
+}*/
+.discount {
+  position: absolute;
+  top: 50%;
+  left: 1%;
+  /* background-size: cover; */
+}
+.discount-content {
+  position: absolute;
+  top: 62%;
+  left: 7%;
+  font-family: "Fredoka One";
+  font-size: 2.5rem;
+  color: #f5f5f5;
+}
+
+.dots {
+  /* width: 20rem; */
+  width: 20rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* flex-direction: row; */
+  margin: auto;
+}
+.dot {
+  padding: 0.9rem;
+  border: none;
+  border-radius: 60%;
+}
+.yellow-dot {
+  background-color: yellow;
+}
+.tomato-dot {
+  background-color: tomato;
+}
+.black-dot {
+  background-color: black;
+}
+.action-btn-end {
+  /* width: 20rem; */
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  border: none;
+  border-radius: 2.5rem;
+  background-color: #fe5e35;
+  color: white;
+  font-family: "Poppins";
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-top: 7.5%;
+  margin-left: 38%;
+}
+
+/* right section end  */
+/* Hero section end  */
+/* Media section start  */
+
+@media screen and (max-width: 970px) {
+  html {
+    font-size: 50%;
+  }
+  nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    justify-content: center;
+  }
+  .nav-left-logo {
+    margin-right: 14%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+  }
 }
